--- a/src/html/world_clock.html
+++ b/src/html/world_clock.html
@@ -1,35 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://p.trellocdn.com/power-up.min.css" />
+
+    <!-- <link rel="stylesheet" href="https://p.trellocdn.com/power-up.min.css" /> -->
+    
+    <!--==================== BOXICONS ====================-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
     <link rel="stylesheet" href="../css/style.css">
+
     <script src="https://p.trellocdn.com/power-up.min.js"></script>
-    <title>Positive self-talk</title>
+
+    <title>The World Clock</title>
 </head>
-<body>
-    <div class="container">
-        <nav class="sidenav">
-            <a href="self_talk.html">Self talk</a>
-            <a href="good_mood.html">Have fun</a>
-            <a href="game_2048.html">Take a break</a>
-            <a href="#">Say thanks</a>
-        </nav>
-        <div id="selftalk">
-            <blockquote class="saying">
-                <p>Talk to yourself like you would to someone you love.</p>
-                <footer>Brene Brown</footer>
-            </blockquote>
-            <ul class="descriptions">
-                <li>I might still have a way to go, but I am proud of how far I have already come.</li>
-                <li>I am capable and strong, I can get through this.</li>
-                <li>I have the power to change my mind.</li>
-                <li>I am improving in every aspect of my life day by day.</li>
-                <li>I am charming, intelligent, and desirable.</li>
-                <li>I am one-of-a-kind and am proud of who I am.</li>
-            </ul>
+
+<body onload="displayTime();">
+    <section class="clock container">
+        <div class="clock__container grid">
+            <div class="clock__content grid">
+                <div class="clock__circle">
+                    <span class="clock__twelve"></span>
+                    <span class="clock__three"></span>
+                    <span class="clock__six"></span>
+                    <span class="clock__nine"></span>
+
+                    <div class="clock__rounder"></div>
+                    <div class="clock__hour" id="clock-hour"></div>
+                    <div class="clock__minutes" id="clock-minutes"></div>
+                    <div class="clock__seconds" id="clock-seconds"></div>
+
+                    <!-- Dark/light button -->
+                    <div class="clock__theme">
+                        <i class='bx bxs-moon' id="theme-button"></i>
+                    </div>
+                </div>
+
+                <div>
+                    <div class="clock__text">
+                        <div class="clock__text-hour" id="text-hour"></div>
+                        <div class="clock__text-minutes" id="text-minutes"></div>
+                        <div class="clock__text-ampm" id="text-ampm"></div>
+                    </div>
+
+                    <div class="clock__date">
+                        <!-- <span id="date-day-week"></span> -->
+                        <span id="date-day"></span>
+                        <span id="date-month"></span>
+                        <span id="date-year"></span>
+                    </div>
+                </div>
+            </div>
+
         </div>
-    </div>
+    </section>
+    <!--==================== MAIN JS ====================-->
+    <script src="../js/world_clock.js"></script>
 </body>
+
 </html>
