--- a/src/html/world_clock.html
+++ b/src/html/world_clock.html
@@ -2,61 +2,57 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- <link rel="stylesheet" href="https://p.trellocdn.com/power-up.min.css" /> -->
-    
-    <!--==================== BOXICONS ====================-->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
-    <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="https://cdn.staticfile.org/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="../css/style.css">
 
-    <script src="https://p.trellocdn.com/power-up.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
 
-    <title>The World Clock</title>
+  <title>The World Clock</title>
 </head>
 
-<body onload="displayTime();">
-    <section class="clock container">
-        <div class="clock__container grid">
-            <div class="clock__content grid">
-                <div class="clock__circle">
-                    <span class="clock__twelve"></span>
-                    <span class="clock__three"></span>
-                    <span class="clock__six"></span>
-                    <span class="clock__nine"></span>
-
-                    <div class="clock__rounder"></div>
-                    <div class="clock__hour" id="clock-hour"></div>
-                    <div class="clock__minutes" id="clock-minutes"></div>
-                    <div class="clock__seconds" id="clock-seconds"></div>
-
-                    <!-- Dark/light button -->
-                    <div class="clock__theme">
-                        <i class='bx bxs-moon' id="theme-button"></i>
-                    </div>
-                </div>
-
-                <div>
-                    <div class="clock__text">
-                        <div class="clock__text-hour" id="text-hour"></div>
-                        <div class="clock__text-minutes" id="text-minutes"></div>
-                        <div class="clock__text-ampm" id="text-ampm"></div>
-                    </div>
-
-                    <div class="clock__date">
-                        <!-- <span id="date-day-week"></span> -->
-                        <span id="date-day"></span>
-                        <span id="date-month"></span>
-                        <span id="date-year"></span>
-                    </div>
-                </div>
-            </div>
-
+<body>
+  <div class="container mt-3">
+    <!--==================== search line ====================-->
+    <div class="row">
+      <div class="col-3">
+        <div class="input-group">
+          <span class="input-group-text">+</span>
+          <input type="text" class="form-control"  id="timezone" name="timezone" placeholder="Search City ...">
         </div>
-    </section>
-    <!--==================== MAIN JS ====================-->
-    <script src="../js/world_clock.js"></script>
+      </div>
+      <div class="col-1 align-self-end">
+        <!-- Inline calendar -->
+        <button type="button" class="btn btn-default">
+          <i class="fa fa-calendar" aria-hidden="true"></i>
+        </button>
+      </div>
+      <div class="col-8">
+        <div class="btn-group">
+          <button type="button" class="btn btn-primary">1</button>
+          <button type="button" class="btn btn-primary">2</button>
+          <button type="button" class="btn btn-primary">3</button>
+          <button type="button" class="btn btn-primary">4</button>
+          <button type="button" class="btn btn-primary">5</button>
+          <button type="button" class="btn btn-primary">6</button>
+          <button type="button" class="btn btn-primary">7</button>
+        </div>
+      </div>
+    </div>
+    <div class="content">
+    </div>
+  </div>
+  
+  <!--==================== MAIN JS ====================-->
+  <script src="https://cdn.staticfile.org/jquery/3.2.1/jquery.min.js"></script>
+  
+  <script src="../js/world_clock.js"></script>
 </body>
 
 </html>
