--- a/src/html/world_clock.html
+++ b/src/html/world_clock.html
@@ -8,18 +8,18 @@
   <link rel="stylesheet" href="https://cdn.staticfile.org/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.10.0/css/bootstrap-datepicker.min.css" integrity="sha512-34s5cpvaNG3BknEWSuOncX28vz97bRI59UnVtEEpFX536A7BtZSJHsDyFoCl8S7Dt2TPzcrCEoHBGeM4SUBDBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="../css/style.css">
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script>
-
+  
+  
   <title>The World Clock</title>
 </head>
 
 <body>
   <div class="container mt-3">
-    <!--==================== search line ====================-->
+    <!--==================== search line begin ====================-->
     <div class="row">
       <div class="col-3">
         <div class="input-group">
@@ -27,9 +27,9 @@
           <input type="text" class="form-control"  id="timezone" name="timezone" placeholder="Search City ...">
         </div>
       </div>
-      <div class="col-1 align-self-end">
+      <div class="col-1 d-flex justify-content-end">
         <!-- Inline calendar -->
-        <button type="button" class="btn btn-default">
+        <button type="button" class="btn btn-default" id="datepicker">
           <i class="fa fa-calendar" aria-hidden="true"></i>
         </button>
       </div>
@@ -45,12 +45,18 @@
         </div>
       </div>
     </div>
+    <!--==================== search line end ====================-->
     <div class="content">
     </div>
   </div>
   
   <!--==================== MAIN JS ====================-->
   <script src="https://cdn.staticfile.org/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+ 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.10.0/js/bootstrap-datepicker.min.js" integrity="sha512-LsnSViqQyaXpD4mBBdRYeP6sRwJiJveh2ZIbW41EBrNmKxgr/LFZIiWT6yr+nycvhvauz8c2nYMhrP80YhG7Cw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   
   <script src="../js/world_clock.js"></script>
 </body>
