--- a/src/html/world_clock.html
+++ b/src/html/world_clock.html
@@ -8,11 +8,8 @@
   <link rel="stylesheet" href="https://cdn.staticfile.org/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.10.0/css/bootstrap-datepicker.min.css" integrity="sha512-34s5cpvaNG3BknEWSuOncX28vz97bRI59UnVtEEpFX536A7BtZSJHsDyFoCl8S7Dt2TPzcrCEoHBGeM4SUBDBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="../css/style.css">
-
-  
   
   <title>The World Clock</title>
 </head>
@@ -22,18 +19,26 @@
     <!--==================== search line begin ====================-->
     <div class="row">
       <div class="col-3">
+        <!-- search autocomplete -->
         <div class="input-group">
           <span class="input-group-text">+</span>
-          <input type="text" class="form-control"  id="timezone" name="timezone" placeholder="Search City ...">
+          <input type="text" class="form-control" autocomplete="off"  id="timezone" name="timezone" placeholder="Search City ...">
+        </div>
+        <ul id="match-list" class="dropdown-menu  d-none d-grid gap-1 p-2 rounded-3 mx-0 shadow w-220px" data-bs-theme="light">
+
+        </ul>
+      </div>
+      <div class="col-2">
+        <!-- Inline calendar -->
+        <div class="input-group">
+          <span class="input-group-text">
+            <i class="fa fa-calendar" aria-hidden="true"></i>
+          </span>
+          <input type="text" class="form-control" id="datepicker">
         </div>
       </div>
-      <div class="col-1 d-flex justify-content-end">
-        <!-- Inline calendar -->
-        <button type="button" class="btn btn-default" id="datepicker">
-          <i class="fa fa-calendar" aria-hidden="true"></i>
-        </button>
-      </div>
-      <div class="col-8">
+      <div class="col-7">
+        <!-- one week button -->
         <div class="btn-group">
           <button type="button" class="btn btn-primary">1</button>
           <button type="button" class="btn btn-primary">2</button>
@@ -55,7 +60,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
- 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.10.0/js/bootstrap-datepicker.min.js" integrity="sha512-LsnSViqQyaXpD4mBBdRYeP6sRwJiJveh2ZIbW41EBrNmKxgr/LFZIiWT6yr+nycvhvauz8c2nYMhrP80YhG7Cw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   
   <script src="../js/world_clock.js"></script>
