--- a/src/html/world_clock.html
+++ b/src/html/world_clock.html
@@ -22,10 +22,9 @@
         <!-- search autocomplete -->
         <div class="input-group">
           <span class="input-group-text">+</span>
-          <input type="text" class="form-control" autocomplete="off"  id="timezone" name="timezone" placeholder="Search City ...">
+          <input type="text" class="form-control" autocomplete="off"  id="timezone" placeholder="Search City ...">
         </div>
-        <ul id="match-list" class="dropdown-menu  d-none d-grid gap-1 p-2 rounded-3 mx-0 shadow w-220px" data-bs-theme="light">
-
+        <ul id="match-list" class="dropdown-menu d-none d-grid gap-1 p-2 rounded-3 mx-0 shadow w-220px" data-bs-theme="light">
         </ul>
       </div>
       <div class="col-2">
